[package]
name = "libc-core"
version = "0.1.0"
edition = "2024"
description = "provides the libc types"
license = "MIT"
repository = "https://github.com/yfblock/libc-core"
documentation = "https://yfblock.github.io/libc-core/libc_core/"


[dependencies]
bitflags = "2.0.2"
num_enum = { version = "0.7.3", default-features = false }
