[package]
name = "libc-core"
version = "0.1.0"
edition = "2024"
description = "provides the libc types"
license = "MIT"
repository = "https://github.com/yfblock/libc-core"
documentation = "https://yfblock.github.io/libc-core/libc_core/"

[features]
zerocopy = ["dep:zerocopy"]

[dependencies]
bitflags = "2.9.1"
num_enum = { version = "0.7.3", default-features = false }
zerocopy = { version = "0.8.20", features = ["derive"], optional = true }
